updating ids and links to them and fixing alignment of h1s

--- a/app/assets/stylesheets/frontend/views/_organisations.scss
+++ b/app/assets/stylesheets/frontend/views/_organisations.scss
@@ -1,5 +1,10 @@
 .organisations-index {
 
+  .other-departments h1 {
+    margin-top: 0;
+    width: 25%;
+  }
+
   .omissions {
     padding: $gutter*2 $gutter 0;
     clear: both;
